Remove phone links, fix PDF on ios

--- a/_sass/minima/_layout.scss
+++ b/_sass/minima/_layout.scss
@@ -276,3 +276,49 @@
 	margin-right: auto;
 	object-fit: cover;
 }
+
+/* CSS for responsive iframe */
+/* ========================= */
+
+/* outer wrapper: set max-width & max-height; max-height greater than padding-bottom % will be ineffective and height will = padding-bottom % of max-width */
+#Iframe-Master-CC-and-Rs {
+	max-width: 960px;
+	max-height: 100%; 
+	overflow: hidden;
+  }
+  
+  /* inner wrapper: make responsive */
+  .responsive-wrapper {
+	position: relative;
+	height: 0;    /* gets height from padding-bottom */
+	
+	/* put following styles (necessary for overflow and scrolling handling on mobile devices) inline in .responsive-wrapper around iframe because not stable in CSS:
+	  -webkit-overflow-scrolling: touch; overflow: auto; */
+	
+  }
+   
+/* Center an image */
+  .center {
+	display: block;
+	margin-left: auto;
+	margin-right: auto;
+  }
+
+  /* iframe container */
+  .container {
+	position: relative;
+	overflow: hidden;
+	width: 100%;
+	padding-top: 70.71%;
+  }
+  
+  /* Then style the iframe to fit in the container div with full height and width */
+  .responsive-iframe {
+	position: absolute;
+	top: 0;
+	left: 0;
+	bottom: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+  }
